syntax = "proto3";

import "lib/geospatial.proto";
import "lib/openstreetmap.proto";

package Overpass;

service Overpass {
  rpc ShortRangeNamed(QueryParameters) returns (stream OpenStreetMap.Element);
  rpc WikidataIdsInRange(QueryParameters) returns (stream WikidataId);
  rpc PoiMetadata(PoiMetadataParameters) returns (stream OpenStreetMap.Element);
  rpc PoiWikidataId(PoiMetadataParameters) returns (stream WikidataId);
}

message QueryParameters {
  Geospatial.Coordinates coordinates = 1;
  double range = 2;
  repeated string tags = 3;
}

message PoiMetadataParameters {
  int64 id = 1;
  repeated string tags = 2;
  OpenStreetMap.Member.Type type = 3;
}

message WikidataId {
  string id = 1;
}
